[tool.poetry]
name = "my_krml_12961912"
version = "0.1.0"
description = "test packages"
authors = ["leo"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
